[package]
name = "desc_sequence"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Steimlé <https://github.com/Dr-TSteimle>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.5"
bwa = { git = "https://github.com/Dr-TSteimle/rust-bwa" }
rust-htslib = { version = ">=0.35.2", default-features = false, features = ["serde_feature"] }
